--- a/styles/block/hebergements.css
+++ b/styles/block/hebergements.css
@@ -38,6 +38,7 @@
    .hebergements .main,
    .hebergements .famous {
       padding: var(--flow-gap, 1.5rem);
+      grid-template-rows: min-content 1fr 2rem;
    }
 }
 
